kubernetes/openresty/openresty_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openresty-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openresty-proxy
  template:
    metadata:
      labels:
        app: openresty-proxy
    spec:
      containers:
        - name: openresty-proxy
          image: openresty-custom:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
