kubernetes/openresty/openresty_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openresty-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: openresty-proxy
