kubernetes/openresty/openresty_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openresty-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: gws";
    # GWS cuz why not? lets confuse wappalyzer :)
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: openresty-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
